--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,9 @@
   box-sizing: border-box;
   background-color: rgb(47, 47, 47);
 }
-
+.activeTitle {
+  z-index: 9999;
+}
 .home {
   min-height: 50vh;
   display: flex;
